--- a/mixer/template/apikey/apiKey.pb.html
+++ b/mixer/template/apikey/apiKey.pb.html
@@ -37,6 +37,7 @@ spec:
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -47,45 +48,8 @@ spec:
 <p>The API being called (api.service).</p>
 
 </td>
-</tr>
-<tr id="Template-api_version">
-<td><code>apiVersion</code></td>
-<td><code>string</code></td>
 <td>
-<p>The version of the API (api.version).</p>
-
-</td>
-</tr>
-<tr id="Template-api_operation">
-<td><code>apiOperation</code></td>
-<td><code>string</code></td>
-<td>
-<p>The API operation is being called.</p>
-
-</td>
-</tr>
-<tr id="Template-api_key">
-<td><code>apiKey</code></td>
-<td><code>string</code></td>
-<td>
-<p>API key used in API call.</p>
-
-</td>
-</tr>
-<tr id="Template-timestamp">
-<td><code>timestamp</code></td>
-<td><code><a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#TimeStamp">istio.policy.v1beta1.TimeStamp</a></code></td>
-<td>
-<p>Timestamp of API call.</p>
-
-</td>
-</tr>
-<tr id="Template-api">
-<td><code>api</code></td>
-<td><code>string</code></td>
-<td>
-<p>The API being called (api.service).</p>
-
+No
 </td>
 </tr>
 <tr id="Template-api_version">
@@ -95,6 +59,9 @@ spec:
 <p>The version of the API (api.version).</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Template-api_operation">
 <td><code>apiOperation</code></td>
@@ -102,6 +69,9 @@ spec:
 <td>
 <p>The API operation is being called.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Template-api_key">
@@ -111,6 +81,9 @@ spec:
 <p>API key used in API call.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Template-timestamp">
 <td><code>timestamp</code></td>
@@ -118,6 +91,9 @@ spec:
 <td>
 <p>Timestamp of API call.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
