--- a/mixer/template/listentry/listEntry.pb.html
+++ b/mixer/template/listentry/listEntry.pb.html
@@ -39,6 +39,7 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -49,13 +50,8 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <p>Specifies the entry to verify in the list. This value can either be a string or an IP address.</p>
 
 </td>
-</tr>
-<tr id="Template-value">
-<td><code>value</code></td>
-<td><code><a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a></code></td>
 <td>
-<p>Specifies the entry to verify in the list. This value can either be a string or an IP address.</p>
-
+No
 </td>
 </tr>
 </tbody>
