--- a/mixer/template/quota/quota.pb.html
+++ b/mixer/template/quota/quota.pb.html
@@ -41,6 +41,7 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -51,13 +52,8 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <p>The unique identity of the particular quota to manipulate.</p>
 
 </td>
-</tr>
-<tr id="Template-dimensions">
-<td><code>dimensions</code></td>
-<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
 <td>
-<p>The unique identity of the particular quota to manipulate.</p>
-
+No
 </td>
 </tr>
 </tbody>
