--- a/mixer/template/metric/metric.pb.html
+++ b/mixer/template/metric/metric.pb.html
@@ -44,6 +44,7 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -54,6 +55,9 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <p>The value being reported.</p>
 
 </td>
+<td>
+No
+</td>
 </tr>
 <tr id="Template-dimensions">
 <td><code>dimensions</code></td>
@@ -61,6 +65,9 @@ then the expression&rsquo;s <a href="https://istio.io/docs/reference//config/pol
 <td>
 <p>The unique identity of the particular metric to report.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 <tr id="Template-monitored_resource_type">
@@ -72,41 +79,8 @@ If the metric backend supports monitored resources, these fields are used to pop
 these fields will be ignored by the adapter.</p>
 
 </td>
-</tr>
-<tr id="Template-monitored_resource_dimensions">
-<td><code>monitoredResourceDimensions</code></td>
-<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
 <td>
-<p>Optional. A set of expressions that will form the dimensions of the monitored resource this metric is being reported on.
-If the metric backend supports monitored resources, these fields are used to populate that resource. Otherwise
-these fields will be ignored by the adapter.</p>
-
-</td>
-</tr>
-<tr id="Template-value">
-<td><code>value</code></td>
-<td><code><a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a></code></td>
-<td>
-<p>The value being reported.</p>
-
-</td>
-</tr>
-<tr id="Template-dimensions">
-<td><code>dimensions</code></td>
-<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
-<td>
-<p>The unique identity of the particular metric to report.</p>
-
-</td>
-</tr>
-<tr id="Template-monitored_resource_type">
-<td><code>monitoredResourceType</code></td>
-<td><code>string</code></td>
-<td>
-<p>Optional. An expression to compute the type of the monitored resource this metric is being reported on.
-If the metric backend supports monitored resources, these fields are used to populate that resource. Otherwise
-these fields will be ignored by the adapter.</p>
-
+No
 </td>
 </tr>
 <tr id="Template-monitored_resource_dimensions">
@@ -117,6 +91,9 @@ these fields will be ignored by the adapter.</p>
 If the metric backend supports monitored resources, these fields are used to populate that resource. Otherwise
 these fields will be ignored by the adapter.</p>
 
+</td>
+<td>
+No
 </td>
 </tr>
 </tbody>
