--- a/mixer/test/spyAdapter/template/quota/sampleQuota.pb.html
+++ b/mixer/test/spyAdapter/template/quota/sampleQuota.pb.html
@@ -12,6 +12,7 @@ number_of_entries: 1
 <th>Field</th>
 <th>Type</th>
 <th>Description</th>
+<th>Required</th>
 </tr>
 </thead>
 <tbody>
@@ -22,13 +23,8 @@ number_of_entries: 1
 <p>The unique identity of the particular quota to manipulate.</p>
 
 </td>
-</tr>
-<tr id="Template-dimensions">
-<td><code>dimensions</code></td>
-<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
 <td>
-<p>The unique identity of the particular quota to manipulate.</p>
-
+No
 </td>
 </tr>
 </tbody>
