--- a/tests/e2e/tests/pilot/testdata/authn/v1alpha1/authn-policy-jwt.yaml.tmpl
+++ b/tests/e2e/tests/pilot/testdata/authn/v1alpha1/authn-policy-jwt.yaml.tmpl
@@ -11,14 +11,14 @@ spec:
   origins:
   - jwt:
       issuer: "test-issuer-1@istio.io"
-      jwksUri: "https://raw.githubusercontent.com/istio/istio/master/tests/common/jwt/jwks.json"
+      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.4/tests/common/jwt/jwks.json"
       triggerRules:
       - excludedPaths:
         - exact: /health_check
         - exact: /jwt2
   - jwt:
       issuer: "test-issuer-2@istio.io"
-      jwksUri: "https://raw.githubusercontent.com/istio/istio/master/tests/common/jwt/jwks.json"
+      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.4/tests/common/jwt/jwks.json"
       triggerRules:
       - includedPaths:
         - exact: /jwt2
